# bt-auto-connect

./: pyproject.toml
src/bt_auto_connect/: bt_auto_connect.py  main.py
