[project]
name = "bt-auto-connect"
version = "0.1.0"
description = "Auto-connect service for bluetooth"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbus-next>=0.2.3"
]

[project.scripts]
bt-auto-connect = "bt_auto_connect.main:main"

# uv tool install --editable .
[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"